Update document class option and enhance endorsement page layout for proposal format

--- a/main.tex
+++ b/main.tex
@@ -15,7 +15,7 @@
 %% User option "proposal" or "tesis"
 %% 	  to change the format
 % \documentclass[<proposaltesis/tesis>,<bahasa/english>]{ugmfmipa}
-\documentclass[tesis,bahasa]{ugmfmipa}
+\documentclass[proposaltesis,bahasa]{ugmfmipa}
 %\documentclass[proposaltesis,bahasa]{ugmfmipa}
 %======================================
 % Information Input
