Refactor abstract and intisari sections for clarity and consistency; update nomenclature command in class file

--- a/contents/abstract/abstract.tex
+++ b/contents/abstract/abstract.tex
@@ -1,5 +1,21 @@
-\textit{
-	Abstract ditulis italic (miring) menggunakan bahasa Inggris dengan jarak antar baris 1 spasi dan maksimal 1 halaman. Abstract adalah versi Bahasa Inggris dari intisari. Abstract dapat ditulis dalam beberapa paragraf. Baris pertama paragraph harus menjorok ke dalam sekitar 1 cm. Tidak dsarankan menggunakan mesin penerjemah melainkan tulis ulang.
-}
+Abstract menggunakan bahasa Inggris dengan jarak antar baris 1 spasi dan maksimal 1 halaman. Abstract adalah versi Bahasa Inggris dari intisari. Abstract dapat ditulis dalam beberapa paragraf. Baris pertama paragraph harus menjorok ke dalam sekitar 1 cm. Tidak disarankan menggunakan mesin penerjemah melainkan tulis ulang.
 
-\noindent\textbf{Keywords} : Keyword 1, Keyword 2, Keyword 3, Keyword 4, Keyword 5
+Contoh:
+
+Most software systems consist several concerns, the premise of such thing is separation of
+concerns, where certain design requirements tend to cut across group of core functional modules.
+Object-oriented techniques for implementing such concerns result in systems that are invasive to
+implement, tough to understand, and difficult to evolve. The new aspect-oriented programming
+(AOP) methodology facilities modularization of crosscutting concerns. Using AOP, there is a
+way to create implementations that are easier to design, understand, and maintain. Further, AOP
+promises higher productivity, improved quality, and better ability to implement newer features.
+AspectJ is a well-established programming language that is widely used to implement
+aspect-oriented programs in Java. However, there is no modeling language available for the
+design aspect oriented programs in AspectJ. Aspect Oriented Design Model (AODM), as a new
+design model for development of AspectJ programs, extends existing UML (Unified Modeling
+Language) concepts using standard UML extension mechanisms to provide aspect-oriented
+concepts as in AspectJ. The AODM species how an aspect-oriented design model maybe
+transformed into an ordinary UML design model.
+
+\vspace{2ex} % Jarak sedikit
+\noindent\textbf{Keywords : Keyword 1, Keyword 2, Keyword 3, Keyword 4, Keyword 5}
