--- a/contents/abstract/intisari.tex
+++ b/contents/abstract/intisari.tex
@@ -1,46 +1,27 @@
-Intisari ditulis menggunakan bahasa Indonesia dengan jarak antar baris 1 spasi dan maksimal 1 halaman. Intisari sekurang-kurangnya berisi tentang latar belakang dan tujuan penelitian, metodologi yang digunakan, hasil penelitian, kesimpulan dan implikasi, dan Kata kunci yang berhubungan dengan penelitian.
+Bagian ini memuat uraian singkat (tidak lebih dari 250 kata) tetapi padat dan jelas serta
+memberikan gambaran menyeluruh tentang isi tugas akhir. Intisari tugas akhir memuat apa dan mengapa
+penelitian dikerjakan, bagaimana dikerjakan, dan apa hasil penting yang diperoleh dari penelitian.
 
-Kata Kunci ditulis maksimal 5 kata yang paling berhubungan dengan isi skripsi. Silakan mengacu pada ACM / IEEE \textit{Computing classification} jika Anda adalah mahasiswa Sarjana TI \textcolor{blue}{http://www.acm.org/about/class/} atau mengacu kepada IEEE keywords \textcolor{blue}{http://www.ieee.org/documents/taxonomy\_v101.pdf} jika Anda berasal dari Prodi Sarjana TE.
+Penelitian ini membahas tentang [APA: Topik utama penelitian]. Penelitian ini dilakukan karena [MENGAPA: Alasan urgensi atau latar belakang masalah]. Tujuan utama dari tugas akhir ini adalah untuk [MENGAPA: Tujuan spesifik]. Metode yang digunakan dalam penelitian ini adalah [BAGAIMANA: Pendekatan, algoritma, atau metodologi yang dipakai]. Proses pengerjaan meliputi tahapan [sebutkan secara singkat tahapan krusial]. Hasil penting yang diperoleh dari penelitian ini menunjukkan bahwa [HASIL: Temuan utama atau performa sistem]. Kesimpulan dari penelitian ini adalah [implikasi hasil].
 
-\noindent{Kata kunci} : Kata kunci 1, Kata kunci 2, Kata kunci 3, Kata kunci 4, Kata kunci 5
+Contoh:
 
-\vspace{1cm}
+Pada umumnya sistem perangkat lunak terdiri dari beberapa concern, premis dari masalah
+ini adalah sebaran concern, di mana kebutuhan rancangan tertentu cenderung memotong grup inti fungsional modul. Teknik orientasi-objek yang menerapkan concern tersebut
+cenderung menghasilkan kode yang tersebar, daya baca yang sulit, serta susah untuk
+dikembangkan. Metodologi baru, aspect-oriented programming (AOP), memberikan fasilitas
+modularisasi pemotong-lintasan/cross-cutting concern. Dengan menggunakan AOP, terdapat
+cara untuk membuat penerapan sistem yang lebih mudah untuk dirancang, dipahami, dan
+dipelihara. Lebih jauh lagi, AOP menjanjikan produktivitas yang lebih tinggi, peningkatan
+kualitas, dan kemampuan lebih baik untuk menambahkan feature baru.
+AspectJ adalah bahasa pemrograman yang digunakan secara luas untuk menerapkan
+program-program berorientasi aspek di Java. Namun demikian, AspectJ masih belum memiliki
+bahasa pemodelan yang dapat memenuhi perancangan program berorientasi aspek. Aspect
+Oriented Design Model (AODM), sebagai sebuah model perancangan baru pada pengembangan
+program dalam AspectJ, hanya memperluas konsep-konsep UML (Unified Modeling Language)
+yang telah ada dengan menggunakan mekanisme perluasan UML untuk memberikan konsep
+orientasi-aspek yang ada di dalam AspectJ. AODM menyediakan spesikasi model rancangan
+orientasi-aspek untuk ditransformasikan menjadi model rancangan UML biasa.
 
-%HAPUS YANG TIDAK PERLU
-%-------------------------------------------------
-\noindent\fbox{%
-	\parbox{\textwidth}{%
-\textbf{Contoh Abstrak Teknik Elektro:} \\
-
-\hspace{1cm} "Penelitian ini bertujuan untuk mengembangkan sistem pengendalian suhu ruangan dengan menggunakan microcontroller. Metodologi yang digunakan adalah desain sirkuit, implementasi sistem pengendalian, dan pengujian performa. Hasil penelitian menunjukkan 
-bahwa sistem pengendalian suhu ruangan yang dikembangkan mampu mengendalikan suhu ruangan dengan akurasi sebesar ±0,5°C. Kesimpulan dari penelitian ini adalah sistem pengendalian suhu ruangan yang dikembangkan efektif dan efisien. \\
-
-Kata kunci: microcontroller, sistem pengendalian suhu, akurasi."
-\vspace{5mm}
-
-\textbf{Contoh Abstrak Teknik Biomedis:} \\
-
-\hspace{1cm} "Penelitian ini bertujuan untuk mengevaluasi keefektifan prototipe alat pemantau denyut jantung berbasis elektrokardiogram (ECG) untuk pasien jantung. Metodologi yang digunakan meliputi desain dan pembuatan prototipe, pengujian dengan pasien, dan analisis data. Hasil penelitian menunjukkan bahwa prototipe alat pemantau denyut jantung berbasis ECG memiliki 
-akurasi yang baik dan mampu memantau denyut jantung pasien secara efektif. Kesimpulan dari penelitian ini adalah prototipe alat pemantau denyut jantung berbasis ECG merupakan solusi 
-yang efektif dan efisien untuk memantau pasien jantung. \\
-
-Kata kunci: elektrokardiogram, alat pemantau denyut jantung, akurasi."
-\vspace{5mm}
-
-	}%
-}
-
-%-------------------------------------------------
-
-\noindent\fbox{%
-	\parbox{\textwidth}{%
-		\textbf{Contoh Abstrak Teknologi Informasi:} \\
-		
-\hspace{1cm} "Penelitian ini bertujuan untuk mengevaluasi keamanan dan privasi pengguna aplikasi media sosial terpopuler. Metodologi yang digunakan meliputi analisis kebijakan privasi dan pengaturan keamanan, pengujian penetrasi, dan survei pengguna. Hasil penelitian 
-menunjukkan bahwa beberapa aplikasi media sosial memiliki kebijakan privasi yang kurang jelas dan rendahnya tingkat keamanan. Kesimpulan dari penelitian ini adalah pentingnya meningkatkan kebijakan privasi dan tingkat keamanan pada aplikasi media sosial untuk melindungi privasi dan data pengguna. \\
-		
-Kata kunci: media sosial, keamanan, privasi, pengguna."
-\vspace{5mm}
-		
-	}%
-}
+\vspace{2ex} % Jarak sedikit
+\noindent \textbf{Kata Kunci: Kata kunci 1, Kata kunci 2, Kata kunci 3, Kata kunci 4, Kata kunci 5}
